--- a/exercices/LinearNN.ipynb
+++ b/exercices/LinearNN.ipynb
@@ -228,6 +228,59 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Relação externa treinamento/validação"
+      ],
+      "metadata": {
+        "id": "vbDbyO5jWPg1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(loss='binary_crossentropy', optimizer='adam', metrics = ['accuracy'])\n",
+        "\n",
+        "early_stopping = EarlyStopping(monitor = 'val_loss', patience = 10, restore_best_weights = True)\n",
+        "\n",
+        "history = model.fit(X_train, y_train, epochs = 100, batch_size = 8, validation_data = (X_test, y_test), callbacks = [early_stopping], verbose = 2)\n"
+      ],
+      "metadata": {
+        "id": "rTNugYxnXGTz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(18, 6))\n",
+        "\n",
+        "plt.subplot(1, 2, 1)\n",
+        "plt.plot(history.history['loss'], label='Training Loss')\n",
+        "plt.plot(history.history['val_loss'], label='Testing Loss')\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.ylabel('Loss')\n",
+        "plt.legend()\n",
+        "plt.title('Loss Curves')\n",
+        "\n",
+        "plt.subplot(1, 2, 2)\n",
+        "plt.plot(history.history['accuracy'], label='Training Accuracy')\n",
+        "plt.plot(history.history['val_accuracy'], label='Testing Accuracy')\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.ylabel('Accuracy')\n",
+        "plt.legend()\n",
+        "plt.title('Accuracy Curves')\n",
+        "\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "sA-QoIuSW-cN"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
